Resolves: tdf#95340 orig lcl_ChkUnoCrsrPaM had reversed 'set' to lcl_ChkPaM

restore lcl_ChkUnoCrsrPaM

(cherry picked from commit 133ad42956ff38fe94020cd9aab316c9dfceff60)

update to new naming and casting

(cherry picked from commit dcae0b482ca78fc9cd6f8523f53aad8c8b486b0f)

bChkSelDirection is always false

(cherry picked from commit 12d9292cd948dbf78bdcab4a46694563b3cce3cf)

rename lcl_ChkUnoCrsrPaM and split it up to be like lcl_ChkPaM[Both]

(cherry picked from commit a3094a1f898b9efb765fe822fc507d3be4369361)

merge lcl_ChkUnoCrsrPaM and lcl_ChkPaM keeping the original logic,
turns out they differed in how they swapped the mark and point

(cherry picked from commit a58e46482c2af06ee9be26313db3513f906d6c0b)

Change-Id: Iab155151226f3a7f00ca649bd690c4391ade8a52
389efc2f45f3110932318882faea82ab8565f89a
1aaf2c17d76ac1d69dfcc268ae1b689c0f1c3fa2
8850031da3901fb3d828c3af20f98ca741fc2a4a
d2575c9690442494c3286a26ab099e8c4c62f884
Reviewed-on: https://gerrit.libreoffice.org/27382
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>